--- a/styles/shapes.css
+++ b/styles/shapes.css
@@ -18,7 +18,7 @@
 	height: 20px;
 	background: rgba(96, 183, 199, 0.1);
 	animation: animate 25s linear infinite;
-	bottom: -50px;
+	bottom: -150px;
 }
 
 /* Triangle */
